[project]
name = "why-time-series-analytics-matters-in-business"
version = "0.1.0"
description = "Companion code for Medium article: why time series analytics matters in business"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
